--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,25 @@
 #root {
   margin: 0 auto;
+  width: 100%;
 }
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f0f0f0;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #dadada;
+  border-radius: 10px;
 }
